k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: namespaxe/hooks_backend:1.8
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "190Mi"
              cpu: "55m"
            limits:
              memory: "195Mi"
              cpu: "60m"
---
apiVersion: v1
kind: Service
metadata:
  name: django-app
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  sessionAffinity: ClientIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "100Mi"
              cpu: "30m"
            limits:
              memory: "100Mi"
              cpu: "40m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
